--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,10 +29,10 @@ t1:
       partition:
         fetch:
           bytes: 300000
-    poll:
-      records: 1
-      interval:
-        ms: 3000
+      poll:
+        records: 1
+        interval:
+          ms: 3000
     consumer:
       group-id: t1-demo
       enable-auto-commit: false
@@ -47,6 +47,7 @@ t1:
       metrics: t1_demo_metrics
       accounts: t1_demo_accounts
       transactions: t1_demo_transactions
+      errors: t1_demo_errors
     listener:
       poll-timeout: 1000
 
