--- a/pom.xml
+++ b/pom.xml
@@ -118,11 +118,10 @@
 
     <repositories>
         <repository>
-            <id>central</id>
-            <url>https://repo.maven.apache.org/maven2</url>
+            <id>local-repo</id>
+            <url>file://${user.home}/.m2/repository</url>
         </repository>
     </repositories>
-
 
     <build>
         <plugins>
